--- a/express-mongo/package.json
+++ b/express-mongo/package.json
@@ -12,7 +12,9 @@
   "description": "",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.0.1"
+    "mongoose": "^7.0.1",
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
