--- a/express-mongo/package.json
+++ b/express-mongo/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cloudinary": "^1.35.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.0.1",
     "multer": "^1.4.5-lts.1",
